<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <EditText
        android:id="@+id/account"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_ip_port"
        android:gravity="center"
        android:hint="@string/input_account"
        android:textColor="#000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_ip_port"
        android:gravity="center"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password_repeat"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_ip_port"
        android:gravity="center"
        android:hint="@string/input_password_repeat"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="20dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_ip_port"
        android:text="@string/register"

        android:textSize="18dp" />


</LinearLayout>