<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/account"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_ip_port"
        android:gravity="center"
        android:hint="@string/input_account"
        android:textColor="#000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_ip_port"
        android:gravity="center"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/login_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#000000" />

        <View
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:background="#CACACA" />

        <TextView
            android:id="@+id/chat_room_address"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="设置地址"
            android:textColor="#000000" />
    </LinearLayout>


</LinearLayout>